packages/svelte/tests/validator/samples/html-block-in-attribute/input.svelte
<div style="{@html text}"></div>
