packages/svelte/tests/compiler-errors/samples/attribute-unique-style/main.svelte
<div style:color="red" style:color="green"></div>